# wiggum-chess

./: .gitignore  .openclaude-profile.json  CLAUDE.md  Cargo.toml  README.md  progress.txt
.claude/evolution/: CLAUDE.md
.claude/skills/evolution-benchmark/: SKILL.md
.claude/skills/evolution-decide/: SKILL.md
.claude/skills/evolution-implement/: SKILL.md
.claude/skills/evolution-propose/: SKILL.md
.claude/skills/ralph/: prd.json
.devcontainer/: Dockerfile  init-firewall.sh
benches/: alloc.rs
chess-engine/: Cargo.toml
chess-engine/src/: engine.rs  eval.rs  lib.rs  main.rs  search.rs  uci.rs
chess-engine/versions/: README.md
chess-engine/versions/v0.1/: CHANGES.md  report.md  results.csv
chess-engine/versions/v0.2/: CHANGES.md  report.md  results.csv  sprt_balanced.csv  sprt_startpos.csv  stc.csv  stockfish.csv  wiggum-engine
chess-engine/versions/v0.3/: CHANGES.md  report.md  results.csv  wiggum-engine
chess-engine/versions/v0.4/: CHANGES.md  report.md  results.csv  wiggum-engine
chess-runner/: Cargo.toml  openings.txt
chess-runner/src/: main.rs  opening_book.rs
chesslib/: Cargo.toml
chesslib-simple/: Cargo.toml
chesslib-simple/src/: lib.rs
chesslib/benches/: alloc.rs  perft.rs
chesslib/src/: analysis.rs  bitboard.rs  board.rs  build.rs  castle_rights.rs  chess_move.rs  clock.rs  color.rs  engine.rs  file.rs  game.rs  lib.rs  magic.rs  match_runner.rs  movegen.rs  pgn.rs  piece_moves.rs  pieces.rs  rank.rs  square.rs  uci_engine.rs
chesslib/src/gen_files/: attacks.rs  between.rs  chessboard.rs  king.rs  knight.rs  lines.rs  magics.rs  mod.rs  pawn.rs  rays.rs  zobrist.rs
evolution-loop/: Cargo.toml
evolution-loop/src/: artifacts.rs  correctness.rs  ideas.rs  main.rs  phase.rs  promotion.rs  state.rs  summary.rs  versioning.rs  worktree.rs
papers/: lib.typ
papers/artigo1/: chess_1.0.typ  refs.yml
papers/artigo2/: chess_2.0.typ  refs.yml
papers/artigo3/: chess.typ  lib.typ  refs.yml
perft-bench/: Cargo.toml  bench.sh  benchmark-report.md  perft_python_chess.py
perft-bench/src/: main.rs
scripts/: benchmark-version.sh  download-positions-dataset.sh  download-stockfish.sh  evolution-loop.sh
scripts/ralph/: .last-branch  prd.json  progress.txt  ralph.sh
scripts/ralph/archive/2026-04-08-evolution-loop-rust/: prd.json
src/: main.rs  square.rs
src/gen_files/: magics.rs
tasks/: evolution-ideas.md  prd-chess-engine-matches.md  prd-evolution-loop-enhancements.md  prd-evolution-loop-rust.md  prd-iterative-deepening.md  prd-non-bitboard-chess-lib.md  prd-pgn-support.md  prd-wiggum-engine-evolution.md  prd-wiggum-evolution-loop.md  prd.json  progress.txt
tasks/archive/2026-04-06-chesslib-workspace/: prd-chesslib-workspace.md
(+1 files in other folders)
