[workspace]
members = ["chesslib", "chess-runner", "chess-engine", "evolution-loop", "chesslib-simple", "perft-bench"]
resolver = "2"

[profile.release]
opt-level = 3
codegen-units = 1
lto = "fat"
panic = "abort"

[profile.dev]
opt-level = 3
debug = true

[profile.test]
opt-level = 3

[profile.bench]
opt-level = 3
# debug = true
# strip = false
