[package]
name = "evolution-loop"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "evolution-loop"
path = "src/main.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
ctrlc = "3"

[dev-dependencies]
tempfile = "3"
